--- a/Subject Page/subject-page.css
+++ b/Subject Page/subject-page.css
@@ -185,34 +185,56 @@ ul .nav-op{
     width:0px;
 }
 
+.left-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
+} 
+
+.right-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30vw;
+} 
+
 .container{
-    height:100vh;
+    height:115vh;
     display:flex;
     flex-flow: row;
-    flex-wrap: wrap;
 }
 #info-block{
-    min-width:400px;
+    max-width:500px;
+    width: 100%;
+    max-height: 200px;
     flex:2 0 600px;
     border:1px solid black;
     padding:10px;
     margin:20px;
 }
 .thread{
-    width:50vw;
-    height:55vh;
+    max-width: 600px;
+    min-height: 225px;
+    margin: 10px;
     border:2px solid black;
-    margin:70px 50px;
     text-align:center;
     overflow-y:hidden;
     overflow-x:hidden;
 }
 
 .upload-container{
-    width:50vw;
-    height:95%;
+    width:100%;
+    height:100%;
     overflow-y:scroll;
     overflow-x:hidden;
+}
+
+#upcoming {
+    padding: 35px;
+    border: 2px solid black;
 }
 
 #bottompage{
@@ -233,4 +255,40 @@ ul .nav-op{
 }
 #bottompage #icons{
     margin:auto;
+}
+
+#new-thread, .file {
+    max-width: 300px;
+    margin: 5px;
+    padding: 35px;
+    border: 2px solid black;
+}
+
+#new-thread > input {
+    height: 150px;
+    font-weight: bolder;
+    color: black;
+    text-align: center;
+}
+
+#upload-file {
+    border: 3px solid black;
+    height: 30px;
+    width: 125px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+}
+
+#buttons {
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#buttons > button {
+    width: 400px;
+    margin: 10px;
 }
