--- a/Signup/signup.css
+++ b/Signup/signup.css
@@ -1,6 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Nova+Flat&display=swap";
 body{
-    background: url("library-hero.jpg") no-repeat;
+    background: url("../images/library-hero.jpg") no-repeat;
     background-size: 100% 100%;
     width: 100vw;
     height: 100vh;
