--- a/Home Page/homepage2.css
+++ b/Home Page/homepage2.css
@@ -228,6 +228,38 @@ ul .nav-op{
     overflow-y:scroll;
     overflow-x:hidden;
 }
+.select{
+    display:inline-block;
+    margin:0px 10px;
+}
+
+select{
+    -webkit-appearance: none;
+    -moz-appearance:none;
+    -o-appearance:none;
+    -ms-appearance: none;
+    appearance: none;
+
+    display: block;
+    margin: 3px 0 30px 0px;
+    padding: 10px 50px 10px 10px;
+    background: url("../images/select.png") no-repeat 95% center;
+    color: grey;
+    border-radius: 5px;
+    border: 2px solid navy;
+    width: 180px;
+    font-size: 15px;
+}
+select option{
+    background-color: #eee;
+    font-size: 15px;
+    color: black;
+    border:2px solid navy;
+
+}
+#rec-upload .btn{
+    margin-left:5px;
+}
 
 #rec-upload > h3, #gd-upload > h3{
     margin:0px;
