--- a/Signup/signup.css
+++ b/Signup/signup.css
@@ -104,7 +104,7 @@ select{
     display: block;
     margin: 3px 0 30px 0px;
     padding: 10px 50px 10px 10px;
-    background: url(select.png) no-repeat 95% center;
+    background: url("../images/select.png") no-repeat 95% center;
     color: grey;
     border-radius: 5px;
     border: 2px solid navy;
