--- a/templates/subject-page.html
+++ b/templates/subject-page.html
@@ -16,11 +16,11 @@
                     <ul>
                         <li class="nav-op"><a>SUBJECT</a>
                             <ul>
-                                <li><a href="subject-page.html">UE18CS205</a></li>
-                                <li><a>UE18CS204</a></li>
-                                <li><a>UE18CS203</a></li>
-                                <li><a>UE18CS202</a></li>
-                                <li><a>UE18CS201</a></li>
+                                <li><a href="01.html">UE18CS201</a></li>
+                                <li><a href="02.html">UE18CS202</a></li>
+                                <li><a href="03.html">UE18CS203</a></li>
+                                <li><a href="04.html">UE18CS204</a></li>
+                                <li><a href="05.html">UE18CS205</a></li>
                             </ul>
                         </li>
                         <li class="nav-op"><a>ACTIVITY</a>
@@ -86,44 +86,6 @@
                     <div class="thread uploads">
                         <h3>LATEST UPLOADS IN UE18CS205</h3>
                         <div class="upload-container">
-                            <div class="card">
-                                <div class="card-header">
-                                    
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Unit 2-Sets, Relations and Functions</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Uploaded By: Rakshith Jayanth</p>
-                                    <a href="../file page/filepage.html" class="btn btn-primary">View File</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    UE18CS205 General thread
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Can someone explain Russel's paradox</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Started By: Krishna S.</p>
-                                    <a href="#" class="btn btn-primary">View Thread</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    UE18CS205 General thread
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Can someone solve this problem?</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Started By: Krishna S.</p>
-                                    <a href="#" class="btn btn-primary">View Thread</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    UE18CS205 General thread
-                                </div>
-                            </div>
                         </div>    
                     </div>
                     <div class="thread uploads">
@@ -182,17 +144,26 @@
                         <h5>Start a thread on Discrete Mathematics</h5>
                         <input type="text" placeholder="Enter Text">
                     </div>
-                    <div class="file uploads">
-                        <h5>Add a new document to the course drive</h5>
-                        <div id="upload-file">
-                           + UPLOAD
+                    <div id="upload-files">    
+                            <h3>Add a new document to the forums</h3>
+                            <center>
+                                <select size="1" id="upload-sub" name="subject">
+                                    <option value="2020">UE18CS201</option>
+                                    <option value="2021">UE18CS202</option>
+                                    <option value="2022">UE18CS203</option>
+                                    <option value="2023">UE18CS204</option>
+                                    <option value="2023">UE18CS205</option>        
+                                </select>
+                                <progress value="0" max="100" id="uploader">0%</progress>
+                                <input type="file" style="margin:10px 50px"  value="upload" id="fileButton" />
+                            </center>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="buttons">
-                <button>Download Course Information</button>
-                <button>Download Syllabus for Next Semester</button>
+                <div id="buttons">
+                        <button>Download Course Information</button>
+                        <button>Download Syllabus for Next Semester</button>
+                    </div>
             </div>
             <div id="bottompage">
                 <p>Switch theme:</p>
@@ -211,6 +182,8 @@
                <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
                <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
                <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+               <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-storage.js"></script>
+
        
                <!-- TODO: Add SDKs for Firebase products that you want to use
                https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -235,6 +208,7 @@
                    //make auth and firestore references
                    const auth=firebase.auth();
                    const db=firebase.firestore();
+                   const storage=firebase.storage();
        
                </script>
                <script src="subject.js"></script>
