Switched to php, hosting support, loading screen

--- a/Calendar/calendar.css
+++ b/Calendar/calendar.css
@@ -274,7 +274,7 @@ TR{
 #nav{
     background:peru;
     width:50%;
-    font-family: cursive;
+    font-family: 'Montserrat';
     float:right;
     height:30px;
     font-size: 20px;
