--- a/Signup/signup.css
+++ b/Signup/signup.css
@@ -192,7 +192,7 @@ fieldset .textbox{
 #left-text h3{
     margin: 7px 10px 50px;
     font-size:25px;
-    font-family: cursive;
+    font-family: 'Montserrat';
 }
 
 #left-text p{
@@ -206,7 +206,7 @@ fieldset .textbox{
     line-height:40px;
 }
 #left >h1{
-    font-family: 'Nova Flat', cursive;
+    font-family: 'Nova Flat', 'Montserrat';
     float:left;
     color:slategray;
     margin:5px 5px;
