--- a/Home Page/homepage2.css
+++ b/Home Page/homepage2.css
@@ -21,6 +21,44 @@ body{
     background:url("../images/bookstack1.png");
     background-size:12.5%;
 }
+#loader{
+    position:fixed;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    background-color:lightblue;
+    z-index:100;
+    height:100vh;
+    width:100%;
+    flex-direction: column;
+}
+#load-logo{
+
+    height:80px;
+    width:80px;
+    background-size:100%;
+    background-image:url("../images/logotitle.png");
+    position:relative;
+    -webkit-animation: loading 1s infinite;
+    animation: loading 1s infinite;
+    -webkit-animation-direction: normal;
+    animation-direction: normal;
+}
+
+@-webkit-keyframes loading {
+from { transform: rotate(0deg);}
+to {transform:rotate(360deg);}
+}
+
+@keyframes loading {
+from { transform: rotate(0deg);}
+to { transform:rotate(360deg);}
+}
+#loader p{
+font-family:'Montserrat';
+margin:5px;
+font-size:18px;
+}
 ::-webkit-scrollbar{
     background:#B3C7D6FF;
     width:8px;
